// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Album/Album.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      >
        <img
          alt="./cover.jpg"
          class="h-full w-full rounded-sm svelte-1l44pje"
          height="256"
          src="./cover.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        Diamonds on the inside
      </h3>
       
      <h4
        class="svelte-1ae1g9f"
        slot="details"
      >
        by 
        <a
          class="underlined"
          href="#/artist/1"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/2"
          onclick="event.stopPropagation()"
        >
          The Innocent Criminals
        </a>
        
         
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Album/Album.tools.svelte: Many artists 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      >
        <img
          alt="./cover.jpg"
          class="h-full w-full rounded-sm svelte-1l44pje"
          height="256"
          src="./cover.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        Diamonds on the inside
      </h3>
       
      <h4
        class="svelte-1ae1g9f"
        slot="details"
      >
        by 
        <a
          class="underlined"
          href="#/artist/3"
          onclick="event.stopPropagation()"
        >
          Muse
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/4"
          onclick="event.stopPropagation()"
        >
          Perl Jam
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/4"
          onclick="event.stopPropagation()"
        >
          Joe Satriani
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/6"
          onclick="event.stopPropagation()"
        >
          Avenged Sevenfold
        </a>
        
         
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Album/Album.tools.svelte: No artist 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      >
        <img
          alt="./cover.jpg"
          class="h-full w-full rounded-sm svelte-1l44pje"
          height="256"
          src="./cover.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        Diamonds on the inside
      </h3>
       
      <h4
        class="svelte-1ae1g9f"
        slot="details"
      >
         
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Album/Album.tools.svelte: Unknown 1`] = `
<div>
   
  <span
    class="svelte-1ipxhxy"
    role="article"
  >
    <div
      class="content svelte-1ipxhxy"
    >
      <span
        class="artwork svelte-1ipxhxy"
      >
        <img
          class="h-full w-full rounded-sm hidden svelte-1l44pje"
          height="256"
          src=""
          width="256"
        />
         
        <span
          class="h-full w-full svelte-1l44pje rounded-sm"
        >
          <i
            class="material-icons svelte-1l44pje"
          >
            music_note
          </i>
        </span>
        
      </span>
       
      <p
        class="controls svelte-1ipxhxy"
      >
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="play"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-xh4kfu"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-xh4kfu"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-1ipxhxy"
    >
      <h3
        class="svelte-1ipxhxy"
      >
        Unknown
      </h3>
       
      <h4
        class="svelte-1ae1g9f"
        slot="details"
      >
        by 
        <a
          class="underlined"
          href="#/artist/1"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/2"
          onclick="event.stopPropagation()"
        >
          The Innocent Criminals
        </a>
        
         
      </h4>
    </header>
  </span>
</div>
`;
